infra/k8s/base/platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  selector:
    app: platform
  ports:
    - port: 3000
      targetPort: 3000
